--- a/index.html
+++ b/index.html
@@ -1,9 +1,59 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Example</title>
-    </head>
-    <body>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
-    </body>
+<head>
+
+  <title>EH Software</title>
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background-color: #222;
+      color: #ddd;
+    }
+
+    p {
+      padding: 10px 10px;
+    }
+
+    .topnav {
+      background-color: #444;
+      color: #fff;
+      overflow: hidden;
+    }
+
+    .topnav a {
+      padding: 10px 20px;
+      display: block;
+      text-align: center;
+      font-size: 15pt;
+      float: left;
+    }
+
+    .topnav a:hover {
+      background-color: #666;
+    }
+
+    .topnav a.home {
+      background-color: #8672bd;
+    }
+
+    .topnav a.home:hover {
+      background-color: #b499ff;
+    }
+
+  </style>
+
+</head>
+<body>
+
+  <div class="topnav">
+    <a class="home">eH software</a>
+    <a>downloads</a>
+  </div>
+  <div>
+    <p>games</p>
+  </div>
+
+</body>
 </html>
