--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>EH Software</title>
+  <title>EH software</title>
 
   <style>
     body {
@@ -41,15 +41,22 @@
     .topnav a.home:hover {
       background-color: #b499ff;
     }
-
   </style>
+
+  <script type="text/javascript">
+
+  </script>
 
 </head>
 <body>
 
   <div class="topnav">
-    <a class="home">eH software</a>
+    <a class="home">EH software</a>
     <a>downloads</a>
+    <a>what</a>
+    <a>else</a>
+    <a>goes</a>
+    <a>here</a>
   </div>
   <div>
     <p>games</p>
