navbar is happy

--- a/here.html
+++ b/here.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-  <title>EH Software</title>
+  <title>Here - EH Software</title>
 
   <link rel="stylesheet" href="style.css">
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -12,7 +12,7 @@
 <body>
   <div id="nav"></div>
   <div>
-    <p>index</p>
+    <p>here</p>
   </div>
 
 </body>
