--- a/downloads.html
+++ b/downloads.html
@@ -13,6 +13,7 @@
   <div id="nav"></div>
   <div>
     <p>downloads</p>
+    <a href="/downloads/Grapple.zip" download="Procedural-Shooter.zip">Procedural Shooter</a>
   </div>
 
 </body>
