--- a/downloads.html
+++ b/downloads.html
@@ -12,8 +12,10 @@
 <body>
   <div id="nav"></div>
   <div>
-    <p>downloads</p>
-    <a href="/downloads/AutoUpdate.exe" download="AutoUpdate.exe">Procedural Shooter</a>
+    <p>Procedural Shooter Install/AutoUpdate:</p>
+    <a class="download" href="/downloads/AutoUpdate.exe" download="AutoUpdate.exe">
+      <img src="/images/download.jpg" alt="DOWNLOAD" width="200">
+    </a>
   </div>
 
 </body>
