added Caedis (no autoupdate, just zip)

--- a/downloads.html
+++ b/downloads.html
@@ -16,6 +16,10 @@
     <a class="download" href="/downloads/AutoUpdate.exe" download="AutoUpdate.exe">
       <img src="/images/download.jpg" alt="DOWNLOAD" width="200">
     </a>
+    <p>Caedis:</p>
+    <a class="download" href="/gamefiles/Caedis.zip" download="Caedis.zip">
+      <img src="/images/download.jpg" alt="DOWNLOAD" width="200">
+    </a>
   </div>
 
 </body>
